crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__trnunderscore.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Courtney",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Tracy",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Rose",
            "role": "Investigator",
            "speaker_code": "INV"
          },
          {
            "name": "Tom",
            "role": "Father",
            "speaker_code": "FAT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "08-SEP-1992",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "26-MAR-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "Did a Topsy and Tim jigsaw and then magnetic fishing. Ethan,\n\tthe baby, was asleep on the settee to begin with. Tom\n\tcame in briefly on his way to work. Hadn't the microphone\n\tswitched on to begin with so this starts a few minutes into\n\tthe visit.",
        "type": "situation"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "chunk_count": 8,
            "item_count": 7,
            "terminator": "?"
          },
          "type": "Trn"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "do",
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "span": {
                "end": 603,
                "start": 601
              },
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 607,
                "start": 604
              },
              "type": "word"
            },
            {
              "cleaned_text": "like",
              "content": [
                {
                  "content": "like",
                  "type": "text"
                }
              ],
              "raw_text": "like",
              "span": {
                "end": 612,
                "start": 608
              },
              "type": "word"
            },
            {
              "cleaned_text": "having",
              "content": [
                {
                  "content": "having",
                  "type": "text"
                }
              ],
              "raw_text": "having",
              "span": {
                "end": 619,
                "start": 613
              },
              "type": "word"
            },
            {
              "cleaned_text": "laces",
              "content": [
                {
                  "content": "laces",
                  "type": "text"
                }
              ],
              "raw_text": "laces",
              "span": {
                "end": 625,
                "start": 620
              },
              "type": "word"
            },
            {
              "cleaned_text": "or",
              "content": [
                {
                  "content": "or",
                  "type": "text"
                }
              ],
              "raw_text": "or",
              "span": {
                "end": 628,
                "start": 626
              },
              "type": "word"
            },
            {
              "cleaned_text": "buckles",
              "content": [
                {
                  "content": "buckles",
                  "type": "text"
                }
              ],
              "raw_text": "buckles",
              "span": {
                "end": 636,
                "start": 629
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "08-SEP-1992",
      "code": "CHI",
      "id": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI"
      },
      "name": "Courtney",
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT"
      },
      "name": "Tom",
      "role": "Father"
    },
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": "Rose",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Tracy",
      "role": "Mother"
    }
  }
}
